--- a/app/src/main/res/layout/fragment_criar_avisos.xml
+++ b/app/src/main/res/layout/fragment_criar_avisos.xml
@@ -36,8 +36,8 @@
         android:id="@+id/seleciona"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
-        android:background="@color/branco"
+        android:background="@color/cinzaescuro"
+        android:layout_marginTop="10dp"
         android:ems="10"
         android:text="Name"
         app:layout_constraintTop_toBottomOf="@id/textView"
@@ -52,6 +52,7 @@
         android:id="@+id/imagemseila"
         android:layout_width="wrap_content"
         android:layout_height="100dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/seleciona"
