--- a/app/src/main/res/layout/fragment_update.xml
+++ b/app/src/main/res/layout/fragment_update.xml
@@ -81,7 +81,7 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/edtCpfPerfil" />
 
-        <EditText
+        <TextView
             android:id="@+id/btnSaveUser"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
