--- a/app/src/main/res/layout/activity_codigo_condominio.xml
+++ b/app/src/main/res/layout/activity_codigo_condominio.xml
@@ -50,7 +50,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textView2"
         app:layout_constraintVertical_bias="0.67" />
-    <EditText
+    <TextView
         android:id="@+id/btnentrar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
