--- a/app/src/main/res/layout/activity_tela_de_cadastro.xml
+++ b/app/src/main/res/layout/activity_tela_de_cadastro.xml
@@ -137,7 +137,7 @@
         app:layout_constraintTop_toBottomOf="@id/edttelefone"
         app:layout_constraintVertical_bias="0.6" />
 
-    <EditText
+    <TextView
         android:id="@+id/btnCadastrar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
