--- a/app/src/main/res/layout/card_cell.xml
+++ b/app/src/main/res/layout/card_cell.xml
@@ -2,13 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@android:color/white"
+    android:background="@color/cinza"
     android:orientation="horizontal">
 
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
+        android:background="@color/cinza"
         android:clickable="true">
 
         <LinearLayout
@@ -17,23 +18,30 @@
             android:orientation="vertical">
 
             <TextView
+                android:background="@color/cinza"
                 android:id="@+id/nome"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="nome"
+                android:textColor="@color/branco"
                 android:textAlignment="center"
                 android:layout_marginTop="10dp"/>
 
             <TextView
                 android:id="@+id/CEP"
+                android:textColor="@color/branco"
+                android:background="@color/cinza"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="CEP"
                 android:textAlignment="center"
                 android:layout_marginTop="10dp"/>
 
-            <Button
+                <TextView
+                    android:padding="15dp"
                 android:id="@+id/proximapagina"
+                    android:background="@drawable/button_border"
+                    android:textColor="@color/branco"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Proxima pagina"
