--- a/app/src/main/res/layout/fragment_escolha_chat.xml
+++ b/app/src/main/res/layout/fragment_escolha_chat.xml
@@ -5,23 +5,30 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/cinza"
     tools:context=".ui.chat.EscolhaChatFragment">
 
-    <Button
+    <TextView
         android:id="@+id/button2"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/branco"
+        android:background="@drawable/button_border"
         android:text=""
+        android:padding="15dp"
         app:layout_constraintBottom_toTopOf="@+id/button3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed" />
 
-    <Button
+    <TextView
         android:id="@+id/button3"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:textColor="@color/branco"
+        android:background="@drawable/button_border"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="15dp"
         android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
