--- a/app/src/main/res/layout/item_aviso.xml
+++ b/app/src/main/res/layout/item_aviso.xml
@@ -14,7 +14,8 @@
 
         <TextView
             android:id="@+id/tituloAvisoTextView"
-            android:layout_width="wrap_content"
+            android:layout_width="360dp"
+            android:textAlignment="center"
             android:layout_height="wrap_content"
             android:text="Título do Aviso"
             android:textSize="18sp"
@@ -23,20 +24,23 @@
 
         <TextView
             android:id="@+id/mensagemAvisoTextView"
-            android:layout_width="wrap_content"
+            android:layout_width="360dp"
+            android:textAlignment="center"
             android:layout_height="wrap_content"
             android:text="Mensagem do Aviso"
             android:textSize="16sp" />
 
         <TextView
             android:id="@+id/dataAvisoTextView"
-            android:layout_width="wrap_content"
+            android:layout_width="360dp"
+            android:textAlignment="center"
             android:layout_height="wrap_content"
             android:text="Data do Aviso"
             android:textSize="14sp" />
         <TextView
             android:id="@+id/tipoAvisoTextView"
-            android:layout_width="wrap_content"
+            android:layout_width="360dp"
+            android:textAlignment="center"
             android:layout_height="wrap_content"
             android:text="Título do Aviso"
             android:textColor="@color/branco"
@@ -45,12 +49,13 @@
         <ImageView
             android:id="@+id/imagemAvisoImageView"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/logo_com_nome" />
+            android:layout_height="50dp"
+             />
 
         <TextView
             android:id="@+id/dateInicioTextView"
-            android:layout_width="wrap_content"
+            android:layout_width="360dp"
+            android:textAlignment="center"
             android:textColor="@color/branco"
             android:layout_height="wrap_content"
             android:text="Mensagem do Aviso"
@@ -58,7 +63,8 @@
 
         <TextView
             android:id="@+id/dateFimTextView"
-            android:layout_width="wrap_content"
+            android:layout_width="360dp"
+            android:textAlignment="center"
             android:textColor="@color/branco"
             android:layout_height="wrap_content"
             android:text="Data do Aviso"
